[package]
name = "occlum-dcap"
version = "0.1.0"
authors = ["Zheng, Qi <huaiqing.zq@antgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types = "1.1.2"
libc = "0.2"
cfg-if = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
